force-app/main/default/objects/custom_create287__c/custom_create287__c.object-meta.xml
<CustomObject>
    <label>Custom created object287</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects287</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>