force-app/main/default/objects/custom_create287__c/fields/custom_create_287field594__c.field-meta.xml
<CustomField>
    <fullName>custom_create_287field594__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 287field594</label>
    <type>Checkbox</type>
</CustomField>